# beatstep-cli

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: BeatStep.hpp  main.cpp
